# signalpandas

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
signalpandas/: __init__.py  custom_types.py  dataframe_accessor.py  filter.py  mathematics.py  misc.py  signal.py  sigtyping.py  units.py  validation.py
src/signalpandas/: custom_types.py  dataframe_accessor.py  filter.py  mathematics.py  misc.py  signal.py
tests/: test_0_signalpandas.py  test_filter.py  test_generic.py  test_mathematics.py  test_signalpandas.py  test_validation.py
