[metadata]
name = signalpandas
description = Bringing signal analysis to pandas!
author = Rick de Klerk
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    signalpandas
install_requires =
    numpy>=1.21.0
    pandas>=1.3.0
    python-dateutil>=2.8.1
    pytz>=2021.1
    scipy>=1.7.0
    six>=1.16.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 121