[metadata]
name = signalpandas
version = 0.1.4
description = Bringing signal analysis to pandas!
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/rickdkk/signalpandas
author = Rick de Klerk
author_email = rickdkk@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy>=1.21
    pandas>=1.3
    python-dateutil>=2.8
    pytz>=2021
    scipy>=1.7
    six>=1.16
python_requires = >=3.10
zip_safe = no

[options.packages.find]
exclude = *.tests

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 121